cert-manager/examples/example-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-1
  namespace: example
  labels:
    app: nginx-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-1
  template:
    metadata:
      labels:
        app: nginx-1
    spec:
      containers:
        - image: nginx
          name: nginx-1
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-1-service
  namespace: example
spec:
  selector:
    app: nginx-1
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-1
  namespace: example
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production # TODO: Change to your ClusterIssuer
spec:
  ingressClassName: nginx # TODO: Change to your ingress class
  rules:
    - host: <YOUR_DOMAIN> # TODO: Change to your test domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-1-service
                port:
                  number: 80
  tls:
    - hosts:
        - <YOUR_DOMAIN> # TODO: Change to your test domain
      secretName: example-com-tls
